k8s/base/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhb-backend
  labels:
    name: hhb-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hhb-backend
  template:
    metadata:
      labels:
        name: hhb-backend
    spec:
      containers:
        - name: hhb-backend
          image: backend
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
