k8s/base/backend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hhb-backend
  labels:
    name: hhb-backend
spec:
  type: ClusterIP
  selector:
    name: hhb-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
