k8s/base/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-backend-ingress
  namespace: ${NAMESPACE}
  labels:
    name: hhb-backend-ingress
#  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
#  tls:
#    - hosts:
#        - backend.minikube
#      secretName: hhb-medewerker-backend-ingress-tls
  rules:
    - host: ${HHB_HOST}
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hhb-backend
                port:
                  number: 80
